all latter problem solve

--- a/assests/index.html
+++ b/assests/index.html
@@ -15,7 +15,7 @@
   <section class="ml-32 flex " >
     
     <div class="conteinar  mb-10  text-5xl">
-      <h1 class="text-green-500 text-5xl font-bold ">real time clock</h1>
+      <h1 class="text-green-500 text-5xl font-bold ">Real time clock</h1>
       <span class="mr-4 text-green-500 " id="hours">00</span>
       <span class="mr-4 text-green-500">:</span>
       <span class="mr-4 text-green-500" id="minute">00</span>
@@ -24,14 +24,14 @@
       <span class="mr-4 text-green-500" id="sesson">PM</span>
     </div>
     <div class="ml-96 mb-10  text-5xl text-center">
-      <h1 class="text-green-500 text-5xl font-bold ">time left</h1>
+      <h1 class="text-green-500 text-5xl font-bold ">Time left</h1>
       <p  id="demo" class="text-green-500" ></p>
     </div>
   </section>
    <section class="text-center"> 
-    <h1 class="text-green-500 text-5xl font-bold">romzan calender </h1>
+    <h1 class="text-green-500 text-5xl font-bold">Romzan calender </h1>
     <h1 class="text-green-500 text-4xl font-bold my-4">2023</h1>
-    <h2 class="text-green-500 text-3xl font-bold my-4">hijri 1444 - bangladesh</h2>
+    <h2 class="text-green-500 text-3xl font-bold my-4">Hijri 1444 - Bangladesh (dhake)</h2>
    </section>
  </header>
  <main class="shadow-inner">
