netlify problem solve

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
   <h1>New calender is publist if the 1st date of ramdan is changed</h1>
   <h1>Stay withe us thank you</h1>
  </footer>
- <script src="../assests/js/app.js"></script>
+ <script src="assests/js/app.js"></script>
 </body>
 
 </html>
