--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <body class="bg-gray-600 ">
  <header >
+  <h1 class="text-green-500 text-5xl text-center mb-10 font-bold">Romzan calender 2023 </h1>
   <section class="lg:ml-32 lg:flex " >
     
     <div class="conteinar  mb-10  text-5xl">
@@ -28,13 +29,11 @@
       <p  id="demo" class="text-green-500" ></p>
     </div>
   </section>
-   <section class="text-center"> 
-    <h1 class="text-green-500 text-5xl font-bold">Romzan calender </h1>
-    <h1 class="text-green-500 text-4xl font-bold my-4">2023</h1>
-    <h2 class="text-green-500 text-3xl font-bold my-4">Hijri 1444 - Bangladesh (Dhaka)</h2>
-   </section>
  </header>
  <main class="">
+  <section class="lg:flex items-center justify-center ">
+    <img id="images" class="h-80 w-9/12 mb-4" src="assests/images/0.jpg" alt="" srcset="">
+  </section>
     <table class="lg:flex lg:justify-center lg:content-center  ">
         <tr class="shadow-lg">
           <th class="border border-gray-600 px-6 text-gray-600 bg-green-500 text-2xl font-bold py-2">ramdan</th>
