some text added

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
   <section class="lg:flex items-center justify-center ">
     <img id="images" class="h-80 w-9/12 mb-4" src="assests/images/0.jpg" alt="" srcset="">
   </section>
+  <section class="">
+    <h1 id="text" class="text-green-500 text-xl font-bold text-center mb-10">Some quistion ans:</h1>
+  </section>
     <table class="lg:flex lg:justify-center lg:content-center  ">
         <tr class="shadow-lg">
           <th class="border border-gray-600 px-6 text-gray-600 bg-green-500 text-2xl font-bold py-2">ramdan</th>
@@ -253,6 +256,7 @@
           <td class="border border-gray-600  text-gray-600 bg-green-500 text-xl font-bold py-2">06:26</td>  
         </tr>
       </table>
+      
  </main>
  <footer class="text-center  border-gray-600  text-gray-600 bg-green-500 text-xl font-bold py-16 mt-20">
   <h1>note:</h1>
