bangla word added

--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
   <h1 class="text-green-500 text-5xl text-center mb-10 font-bold">Romzan calender 2023 </h1>
   <section class="lg:ml-32 lg:flex " >
     
-    <div class="conteinar  mb-10  text-5xl">
-      <h1 class="text-green-500 text-5xl font-bold ">Real time clock</h1>
-      <span class="mr-4 text-green-500 " id="hours">00</span>
-      <span class="mr-4 text-green-500">:</span>
-      <span class="mr-4 text-green-500" id="minute">00</span>
-      <span class="mr-4 text-green-500">:</span>
-      <span class="mr-4 text-green-500" id="seconds">00</span>
-      <span class="mr-4 text-green-500" id="sesson">PM</span>
+    <div class="conteinar  mb-10  text-3xl">
+      <h1 class="text-green-500 text-3xl font-bold ">Real time clock : </h1>
+      <span class=" text-green-500 " id="hours">00</span>
+      <span class=" text-green-500">:</span>
+      <span class=" text-green-500" id="minute">00</span>
+      <span class=" text-green-500">:</span>
+      <span class=" text-green-500" id="seconds">00</span>
+      <span class=" text-green-500" id="sesson">PM</span>
     </div>
-    <div class="lg:ml-96 mb-10  text-5xl lg:text-center">
-      <h1 class="text-green-500 text-5xl font-bold ">Time left</h1>
+    <div class="lg:ml-96 mb-10  text-3xl lg:text-left">
+      <h1 class="text-green-500 text-3xl font-bold ">Time left : </h1>
       <p  id="demo" class="text-green-500" ></p>
     </div>
   </section>
