--- a/calender.html
+++ b/calender.html
@@ -11,7 +11,7 @@
 <body class="bg-gray-500">
     <header>
         <section class="lg:ml-32 lg:flex " >  
-            <div class="conteinar ml-52  mb-10  border border-green-600  shadow-green-500  shadow-lg text-3xl mt-10 p-10 ">
+            <div class="conteinar ml-52  mb-10 drop-shadow-2xl  border border-green-600 bg-slate-600 hover:bg-slate-500   shadow-green-500  shadow-lg text-3xl mt-10 p-10 ">
               <h1 class="text-green-500 text-3xl font-bold ">Real time clock : </h1>
               <span class=" text-green-500 " id="hours">00</span>
               <span class=" text-green-500">:</span>
@@ -20,14 +20,14 @@
               <span class=" text-green-500" id="seconds">00</span>
               <span class=" text-green-500" id="sesson">PM</span>
             </div>
-            <div class="lg:ml-96 mb-10  border border-green-600 mt-10 p-10 shadow-lg shadow-green-500   text-3xl lg:text-left">
+            <div class="lg:ml-96 mb-10  border drop-shadow-2xl border-green-600 mt-10 p-10 shadow-lg bg-slate-600 hover:bg-slate-500 text-gray-600  shadow-green-500   text-3xl lg:text-left">
               <h1 class="text-green-500 text-3xl font-bold ">Time left : </h1>
               <p  id="demo" class="text-green-500" ></p>
             </div>
           </section>
     </header>
     <main>
-            <table class="lg:flex lg:justify-center lg:content-center shadow-green-500 shadow-lg mx-auto w-5/12    ">
+            <table class="drop-shadow-2xl lg:flex lg:justify-center lg:content-center shadow-green-500 shadow-lg mx-auto w-6/12  py-4   ">
                 <tr class="shadow-lg">
                   <th class="border border-gray-600 px-6 text-gray-600 bg-green-500 text-2xl font-bold py-2">ramdan</th>
                   <th class="border border-gray-600  text-gray-600 bg-green-500 px-6  text-xl font-bold py-2">date</th>
