--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body class="bg-gray-600 ">
  <header >
-  <nav class="px-10">
+  <nav class="px-10 drop-shadow-2xl  shadow-sm shadow-green-500">
     <div class="navbar bg-gray-600">
       <div class="navbar-start">
         <a class="btn btn-ghost normal-case text-xl text-green-500">ramadan calender</a>
@@ -24,15 +24,15 @@
       </div>
     </div>
   </nav>
-  <h1 class="text-green-500 text-5xl text-center mb-10 font-bold">Romzan calender 2023 </h1>
+  <h1 class="text-green-500 text-5xl text-center my-10 font-bold mt">Ramadan calender 2023 </h1>
   
  </header>
  <main class="">
-  <section class="lg:flex items-center justify-center ">
+  <section class="lg:flex items-center justify-center drop-shadow-2xl  shadow-lg shadow-green-500 w-9/12 mx-auto py-5 ">
     <img id="images" class="h-96 w-9/12 mb-4" src="assests/images/0.jpg" alt="" srcset="">
   </section>
   <section class="">
-    <h1 id="text" class="text-green-500 text-xl font-bold text-center py-20">Some quistion ans:</h1>
+    <h1 id="text" class="text-green-500 text-xl font-bold text-center py-12">Some quistion ans:</h1>
   </section>     
  </main>
  
