--- a/calender.html
+++ b/calender.html
@@ -20,7 +20,7 @@
               <span class=" text-green-500" id="seconds">00</span>
               <span class=" text-green-500" id="sesson">PM</span>
             </div>
-            <div class="lg:ml-96 mb-10  border border-green-600 mt-10 p-10 drop-shadow-2xl  shadow-lg shadow-green-500 bg-slate-600 hover:bg-slate-500 text-gray-600     text-3xl lg:text-left">
+            <div class="lg:ml-96 mb-10  border border-green-600 mt-10 p-10 drop-shadow-2xl  shadow-lg shadow-green-500 bg-slate-600 hover:bg-slate-500:text text-gray-600     text-3xl lg:text-left">
               <h1 class="text-green-500 text-3xl font-bold ">Time left : </h1>
               <p  id="demo" class="text-green-500" ></p>
             </div>
