--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <img id="images" class="h-96 w-9/12 mb-4" src="assests/images/0.jpg" alt="" srcset="">
   </section>
   <section class="">
-    <h1 id="text" class="text-green-500 text-xl font-bold text-center py-12">Some quistion ans:</h1>
+    <h1 id="text" class="text-green-500 text-2xl font-bold text-center py-12">Some quistion ans:</h1>
   </section>     
  </main>
  
