--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <section class="lg:flex items-center justify-center drop-shadow-2xl  shadow-lg shadow-green-500 w-9/12 mx-auto py-5 ">
     <img id="images" class="h-96 w-9/12 mb-4" src="assests/images/0.jpg" alt="" srcset="">
   </section>
-  <section class="">
+  <section class="w-9/12 mx-auto">
     <h1 id="text" class="text-green-500 text-2xl font-bold text-center py-12">Some quistion ans:</h1>
   </section>     
  </main>
