--- a/calender.html
+++ b/calender.html
@@ -253,6 +253,7 @@
         <h1>The calender represent the time of Dhaka bangladesh</h1>
         <h1>New calender is publist if the 1st date of ramdan is changed</h1>
         <h1>Stay withe us thank you</h1>
+        <h3 class="text-slate-500 hover:text-blue-600 ">developer by shazin</h3>
        </footer>
     <script src="assests/js/app.js"></script>
 </body>
