--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
   <nav class="px-10 drop-shadow-2xl  shadow-sm shadow-green-500">
     <div class="navbar bg-gray-600">
       <div class="navbar-start">
-        <a class="btn btn-ghost normal-case text-xl text-green-500">ramadan calender</a>
+        <a class="btn btn-ghost normal-case text-xl text-green-500 hover:text-red-400">ramadan calender</a>
       </div>
       <div class="navbar-center hidden lg:flex">
       </div>
       <div class="navbar-end">
-        <a onclick="calender()" class="btn bg-green-500 text-gray-500">calender</a>
+        <a onclick="calender()" class="btn bg-green-500 text-gray-500 hover:text-red-300">calender</a>
       </div>
     </div>
   </nav>
-  <h1 class="text-green-500 text-5xl text-center my-10 font-bold mt"> nosaiba cake house </h1>
+  <h1 class="text-green-500 text-5xl text-center my-10 font-bold mt hover:text-red-500"> nosaiba cake house </h1>
   
  </header>
  <main class="">
